ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ayyaz-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
    certmanager.k8s.io/issuer: "ayyaz-letsencrypt-staging-issuer"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - recetarioketo.com
    secretName: ayyaz-letsencrypt-staging-certificate
  rules:
  - host: recetarioketo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ayyazdemo-wordpress
          servicePort: 80
  - http: www.recetarioketo.com
      paths:
      - path: /
        backend:
          serviceName: ayyazdemo-wordpress
          servicePort: 80
